# projeto_para_meu_amor

./: README.md  pyproject.toml
instance/: app.db  seen.db
src/app/: __init__.py
src/app/models/: __init__.py  message.py  music.py  photo.py
src/app/static/assets/css/: style.css
src/app/static/assets/js/: script.js
src/app/templates/: index.html  upload.html
src/controllers/: __init__.py  main.py  message.py  music.py  photo.py
src/services/: __init__.py  message.py  music.py  photo.py
