[project]
name = "projeto-para-meu-amor"
version = "0.1.0"
description = "\"Um pequeno projetinho para você\""
authors = [
    {name = "João Vítor Lira",email = "16088480602@estudante.ufjf.br"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
